k8s/go-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api
  namespace: poultry-dev
spec:
  type: ClusterIP
  selector:
    app: go-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
